--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
 
 #billboard {
   margin: auto;
+  z-index: 2;
   padding: 60px 20px;
   border-radius: 15px;
   font-family: "Exo 2";
@@ -153,28 +154,14 @@ body {
   background-color: gray;
 }
 
-.sky {
-  display: flex;
-  height: 100%;
-  position: relative;
-}
+/* --------- SKY---------- */
 
-.moon {
-  margin: auto;
-  width: 14em;
-  height: 14em;
-  border-radius: 50%;
-  background-color: pink;
-  position: relative;
-  box-shadow: 0 0 0 0.6em #2c394b, 0 0 0 1.4em #1f2938, 0 0 0 2em #1c2735;
+#sky {
+  height: 60px;
 }
 
 .stars {
   position: absolute;
-  top: -20%;
-  right: -30%;
-  bottom: 0;
-  left: -30%;
   color: #404c5d;
   text-align: right;
   animation: shine 2s linear infinite;
@@ -182,61 +169,60 @@ body {
 
 .stars:before,
 .stars:after {
-  position: absolute;
-  content: "*";
   color: #404c5d;
-  z-index: 2;
 }
 
 .stars:before {
-  top: 30%;
-  right: -4%;
   animation: shine 2s linear infinite alternate-reverse;
 }
 
 .stars:after {
-  top: 10%;
+  animation: shine 1s linear infinite;
+}
+
+#star1 {
+  top: 4%;
+  right: 4%;
+}
+
+#star2 {
   right: 10%;
-  animation: shine 1.5s linear infinite;
 }
 
-.stars2 {
-  top: -5%;
+#star3 {
+  right: 12%;
+  top: 10%;
+  /* transform: rotate(-190deg); */
+}
+
+#star4 {
+  top: 11%;
+  right: 30%;
+  /* transform: rotate(-90deg); */
+}
+
+#star5 {
+  top: 13%;
   right: 40%;
-  text-align: left;
-  transform: rotate(-90deg);
+  transform: rotate(-200deg);
 }
 
-.stars2:after {
-  top: 5%;
-  right: 20%;
+#star6 {
+  top: 2%;
+  right: 60%;
+  /* transform: rotate(-200deg); */
 }
 
-.stars2:before {
-  top: -10%;
-  right: 40%;
+#star7 {
+  top: 9%;
+  right: 90%;
+  transform: rotate(-200deg);
 }
 
-.shooting-star {
-  position: absolute;
-  border-radius: 50%;
-  background-color: #fff;
-  width: 0.3em;
-  height: 0.3em;
-  animation: cometFlight 5s ease infinite;
-}
-
-@keyframes cometFlight {
-  0% {
-    top: 0;
-    right: -50%;
-    opacity: 1;
-  }
-  100% {
-    top: 100%;
-    right: 60%;
-    opacity: 0;
-  }
+#star5 {
+  top: 9%;
+  right: 90%;
+  transform: rotate(-200deg);
 }
 
 @keyframes shine {
@@ -249,18 +235,61 @@ body {
   }
 }
 
-@keyframes lakeMovement {
-  0%,
-  100% {
-    box-shadow: -45px 5px 0 0 #2ce7b9, 45px 5px 0 0 #27b797,
-      -25px 10px 0 0 #238676, 25px 10px 0 0 #238676, -5px 15px 0 0 #1f5a58,
-      5px 15px 0 0 #1f5a58, 0 20px 0 0 #1d4b4c, -20px 20px 0 0 #1b383f,
-      50px 20px 0 0 #1b383f, 0 25px 0 0 #1b383f;
+.shooting-star {
+  position: relative;
+  width: 1px;
+  height: 1px;
+  background-color: white;
+}
+
+.shooting-star::before {
+  content: "";
+  width: 100px;
+  right: 1px;
+  height: 1px;
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(255, 255, 255, 0.4) 100%
+  );
+}
+
+.shooting-star:nth-of-type(1) {
+  top: 25%;
+  animation: shoot1 10s ease-in infinite;
+  transform: rotate(5deg);
+}
+.shooting-star:nth-of-type(2) {
+  top: 50%;
+  animation: shoot2 13s ease-in infinite;
+  transform: rotate(4deg);
+}
+
+@keyframes shoot1 {
+  0% {
+    left: 40%;
   }
-  50% {
-    box-shadow: -55px 5px 0 0 #2ce7b9, 55px 5px 0 0 #27b797,
-      -35px 10px 0 0 #238676, 35px 10px 0 0 #238676, -10px 15px 0 0 #1f5a58,
-      10px 15px 0 0 #1f5a58, 5px 20px 0 0 #1d4b4c, -15px 20px 0 0 #1b383f,
-      60px 20px 0 0 #1b383f, -10px 25px 0 0 #1b383f;
+  5% {
+    left: 100%;
+    top: 100%;
+  }
+  5.1% {
+    left: 0;
+    top: 0;
+  }
+}
+
+@keyframes shoot2 {
+  0% {
+    left: 0;
+    top: 10%;
+  }
+  10% {
+    left: 100%;
+    top: 30%;
+  }
+  10.1% {
+    left: 0;
+    top: 10%;
   }
 }
