--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
 }
 
 #lights {
-  margin: 20px auto -20px auto;
+  margin: 60px auto -20px auto;
   display: flex;
   align-content: space-between;
   justify-content: space-evenly;
@@ -72,11 +72,11 @@ body {
 }
 
 .light {
-  margin-top: -50px;
-  border-top: 50px solid white;
-  border-left: 65px solid transparent;
-  border-right: 65px solid transparent;
-  width: 20px;
+  margin-top: -110px;
+  border-top: 110px solid white;
+  border-left: 60px solid transparent;
+  border-right: 60px solid transparent;
+  width: 30px;
 
   border-radius: 25% 25% 0 0;
   mask-image: -webkit-gradient(
@@ -88,8 +88,23 @@ body {
   );
 }
 
-.light1 {
+#light1 {
+  transform: rotate(4deg);
+  animation: rotateLight 25s infinite alternate;
+}
+
+#light2 {
   animation: blinker 1s linear infinite;
+  transform: rotate(-4deg);
+}
+
+@keyframes rotateLight {
+  0% {
+    transform: rotate(-20deg);
+  }
+  100% {
+    transform: rotate(20deg);
+  }
 }
 
 @keyframes blinker {
@@ -151,7 +166,7 @@ body {
   width: 30px;
   height: 200px;
   background-color: rgb(96, 146, 146);
-  margin: -20px auto 0 auto;
+  margin: -60px auto 0 auto;
 }
 
 #road {
