--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@ h1 {
   font-size: 30px;
 }
 
+/* a[target="_blank"]::after {
+  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
+  margin: 0 3px 0 5px;
+} */
+
 :root {
   --neon-text-color: #f40;
   --neon-border-color: #08f;
@@ -164,9 +169,26 @@ body {
 
 #pole {
   width: 30px;
-  height: 200px;
+  height: 220px;
   background-color: rgb(96, 146, 146);
   margin: -60px auto 0 auto;
+}
+
+#base {
+  min-width: 120px;
+  width: 30%;
+  height: 40px;
+  background-color: gray;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#base a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 #road {
