--- a/src/App.css
+++ b/src/App.css
@@ -300,11 +300,11 @@ body {
 }
 
 .shooting-star:nth-of-type(1) {
-  animation: shoot1 2s ease-in infinite;
+  animation: shoot1 12s ease-in infinite;
   transform: rotate(10deg);
 }
 .shooting-star:nth-of-type(2) {
-  animation: shoot2 2s linear infinite;
+  animation: shoot2 5s linear 10s infinite;
   transform: rotate(172deg);
 }
 
