--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,25 @@ h1 {
   font-size: 30px;
 }
 
+a {
+  color: white;
+  font-weight: bold;
+  /* text-decoration: none; */
+}
+
+input[type="submit"] {
+  background-color: white;
+  color: black;
+  border-radius: 30px;
+  padding: 10px;
+  cursor: pointer;
+  /* box-shadow: 0 0 10px #719ece; */
+}
+
+input[type="submit"]:hover {
+  background-color: pink;
+}
+
 /* a[target="_blank"]::after {
   content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
   margin: 0 3px 0 5px;
@@ -185,12 +204,6 @@ body {
   justify-content: center;
 }
 
-#base a {
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-}
-
 #road {
   width: 100%;
   height: 5px;
@@ -366,9 +379,14 @@ body {
 }
 
 /* ------------------ FORM ------------------ */
+#buy div {
+  margin-top: 10px;
+}
+
 #buy form {
   width: 80%;
   margin: auto;
+  text-align: center;
   /* display: flex; */
   /* justify-content: center; */
 }
@@ -381,5 +399,29 @@ body {
 textarea {
   resize: none;
   outline: none !important;
-  box-shadow: 0 0 10px #719ece;
+  background: none;
+  color: white;
+
+  border: 2px solid white;
+  font-size: 40px;
+  text-align: center;
+}
+
+.grow-wrap {
+  display: grid;
+}
+.grow-wrap::after {
+  content: attr(data-replicated-value) " ";
+  white-space: pre-wrap;
+  visibility: hidden;
+}
+.grow-wrap > textarea {
+  resize: none;
+  overflow: hidden;
+}
+.grow-wrap > textarea,
+.grow-wrap::after {
+  padding: 20px 0;
+  font: inherit;
+  grid-area: 1 / 1 / 2 / 2;
 }
