--- a/src/App.css
+++ b/src/App.css
@@ -428,7 +428,7 @@ h1 {
 #buy {
   margin: 20px;
   padding-bottom: 30px;
-  border-radius: 20px;
+  border-radius: 15px;
   border: 1px solid white;
   text-align: center;
 }
@@ -438,7 +438,7 @@ h1 {
 }
 
 #custom-button {
-  margin-top: -24px;
+  margin: -60px -40px 0 0;
   float: right;
 }
 
@@ -530,4 +530,31 @@ textarea {
 #footer {
   margin: 50px;
   font-size: var(--sizeSmall);
+}
+
+/* ------------------ LOADING ------------------ */
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
