--- a/src/App.css
+++ b/src/App.css
@@ -253,8 +253,8 @@ h1 {
 
 #base-price button {
   width: 180px;
-  /* box-shadow: 0 0 5rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
-    0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe; */
+  box-shadow: 0 0 5rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
+    0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
 }
 
 #road {
@@ -425,6 +425,13 @@ h1 {
 }
 
 /* ------------------ BUY ------------------ */
+#complete {
+  margin-top: 20px;
+  background-color: white;
+  color: black;
+  padding: 20px;
+}
+
 #buy {
   margin: 20px;
   padding-bottom: 30px;
@@ -534,16 +541,16 @@ textarea {
 
 /* ------------------ LOADING ------------------ */
 
-.lds-dual-ring {
+.loader {
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 30px;
+  height: 30px;
 }
-.lds-dual-ring:after {
+.loader:after {
   content: " ";
   display: block;
-  width: 64px;
-  height: 64px;
+  width: 20px;
+  height: 20px;
   margin: 8px;
   border-radius: 50%;
   border: 6px solid #fff;
