--- a/src/App.css
+++ b/src/App.css
@@ -433,11 +433,14 @@ h1 {
 }
 
 #buy {
-  margin: 20px;
   padding-bottom: 30px;
-  border-radius: 15px;
-  border: 1px solid white;
   text-align: center;
+  width: var(--billboard-width);
+  max-width: var(--billboard-max-width);
+  border: 1px solid white;
+  border-radius: 15px;
+  padding: 20px;
+  margin: 20px auto;
 }
 
 #transaction {
@@ -455,19 +458,10 @@ h1 {
   text-align: center;
 }
 
-/* #buy form input[type="submit"],
-#buy form textarea {
-  width: 100%;
-} */
-
 textarea {
   margin-top: 20px;
   resize: none;
   outline: none !important;
-
-  /* background: none; */
-  /* color: white; */
-
   border: 2px solid white;
   text-align: center;
 }
@@ -529,9 +523,14 @@ textarea {
 
 #info {
   margin: 30px auto;
-  width: 80%;
+  width: var(--billboard-width);
+  max-width: var(--billboard-max-width);
   text-align: left;
-  /* font-size: var(--sizeSmall); */
+  border: 1px solid white;
+  /* background-color: white;
+  color: black; */
+  padding: 20px;
+  border-radius: 15px;
 }
 
 #footer {
